# art-kingshot

./: .gitignore  AGENTS.md  ENG.md  QA.md  README.md  TODO.md  TPM.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  pyproject.toml  sprint.md  sprint2.md  sprint3.md
.github/workflows/: deploy.yml  nightly-playwright.yml  pr.yml
client/: index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.mjs  tsconfig.json  vite.config.js  vitest.config.ts
client/scripts/: check-i18n.js  check-i18n.mjs
client/src/: Admin.tsx  App.jsx  App.tsx  BearRally.jsx  BearRally.tsx  Profiles.tsx  VikingVengeance.jsx  VikingVengeance.tsx  apiClient.ts  i18n.js  main.jsx  main.tsx  styles.css
docs/: api-contract.md  architecture.md  backlog.md  discord-bot-discovery.md  discord-bot-testing.md  viking-vengeance-my-assignment-design.md
docs/algorithm/: lastrun.json  (+2 more)
playwright/: fixtures.ts  ui-flows.spec.ts  ui-snapshots.spec.ts  utils.ts
screenshotProcessor/: __init__.py  header.py  image_utils.py  ocr_utils.py  pipeline.py  process_screenshot.py  server.py
scripts/: assignments-metrics.js  check-alliance-switch.js  check-auth-flow.js  gen-secret.sh  seedSession.js  seedTestScenario.js  snapshot.js
server/: api.test.ts  assignments.js  assignments.test.js  assignments.test.ts  assignments.ts  config.ts  express.d.ts  index.js  index.ts  kingshot.js  kingshot.test.js  kingshot.test.ts  kingshot.ts  package-lock.json  package.json  tsconfig.json  types.ts  validation.ts
shared/: allianceConfig.ts  package.json  types.ts
(+138 files in other folders)
